--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
+    "@ionic/angular": "^5.5.0",
+    "@ionic/angular-toolkit": "^3.0.0",
     "@ionic/storage": "2.2.0",
+    "cordova": "^10.0.0",
+    "ionic": "^5.4.16",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
+    "npm": "^6.14.9",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
