--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.20.0",
@@ -25,6 +26,7 @@
     "@ionic/angular": "^5.5.0",
     "@ionic/angular-toolkit": "^3.0.0",
     "@ionic/storage": "2.2.0",
+    "angular2-jwt": "^0.2.3",
     "cordova": "^10.0.0",
     "ionic": "^5.4.16",
     "ionic-angular": "3.9.9",
